Fix namespace for docker hub

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,11 @@ language:
 jdk:
   - oraclejdk8
 
-script: docker login -u ${DOCKER_HUB_USER} -p ${DOCKER_HUB_KEY} -e ${DOCKER_HUB_EMAIL} && gradle clean check pushImage -i
+before_script:
+  - docker login -u ${DOCKER_HUB_USER} -p ${DOCKER_HUB_KEY} -e ${DOCKER_HUB_EMAIL}
+
+script:
+  - gradle clean check pushImage -i
 
 after_script:
   - docker logout
